[package]
name = "maptoposter-rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
clap = { version = "~4.5", features = [ "cargo" ] }
reqwest = { version = "~0.12", features = [ "rustls-tls", "blocking", "json" ], default-features = false }
serde = { version = "~1.0", features = [ "derive" ] }
serde_json = "~1.0"
tracing = "~0.1.44"
tracing-subscriber = "~0.3.22"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.3"
